--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -125,7 +125,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A"
+    "## Author\n",
+    "Victor Temple"
    ]
   }
  ],
